Add volunteer organizer blurb

--- a/docs/volunteer.mdx
+++ b/docs/volunteer.mdx
@@ -9,11 +9,28 @@ import { VolunteerFormLink } from '/docs/react_components/VolunteerFormLink.jsx'
 
 This volunteer program aims to train and organize volunteers to build, translate, test, and maintain digital guided forms that everyday people can use to fill out critical legal forms online. You can see some of these on [Court Forms Online](https://courtformsonline.org/). We would love your help!
 
-:::info[**Updates**]
-Thanks for the great response! We are now focusing on the "volunteer organizing" team to help expand the program. For all other roles, you can still submit the form and we will reach out when we can take on more volunteers in those positions.
-:::
-
 <VolunteerFormLink/>
+
+## Context
+
+Since before COVID‑19, all over the US, many people have not been able to get to critical court services or legal help. For example, parents who need to leave home for various reasons need specific forms and processes to set up legally supported access to medical care or schools for their children through family or community members.
+
+Digital forms—online guided interviews—are a proven way to bridge that gap for many, helping clarify forms and processes with access from home, yet those digital forms remain scarce. During COVID-19 this project, the Document Assembly Line (DAL) at [SuffolkLITLab](https://suffolklitlab.org/), in Massachusetts, ran a massive volunteer effort, and now partners with courts and organizations in [numerous states](https://courtformsonline.org/) to provide free online forms. We are currently looking to grow our new volunteer initiative to increase our reach across the US.
+
+:::info[**Current initiative**]
+## Remote administration and logistics volunteer opportunities
+
+⭐️ [Sign up to express your interest here](https://apps.suffolklitlab.org/interview?i=docassemble.DALVolunteerSignup:main.yml&source=docsblurbstart).
+
+**Objective**: We are starting a new volunteer push to help people in under-served communities across the United States obtain the legal protection they need, even when they cannot reach a courthouse.
+
+*At this stage we are assessing the feasibility of expanding our new volunteer program, and organizers are a crucial piece of the puzzle. This journey will take organizational stamina and that is why we are starting with our organizers.*
+
+**Volunteer organizer role**:
+We need people who can coordinate and steadily grow a volunteer base that builds, translates, tests, and maintains online legal forms. As a team, we are looking for people who can communicate well, work independently, track progress, and assess strengths and obstacles. We will need some volunteers to have comfort with one or more of the following tools: email, Zoom, Microsoft Teams, Slack, project boards, spreadsheets, and GitHub. Your work will shape how we roll out the program and keep it responsive to state‑specific needs.
+
+⭐️ [Sign up to express your interest here](https://apps.suffolklitlab.org/interview?i=docassemble.DALVolunteerSignup:main.yml&source=docsblurbend).
+:::
 
 ## Volunteer opportunities
 
@@ -21,7 +38,7 @@ You can join one or more of several volunteer teams:
 
 * [Volunteer organizing.](#volunteer-organizing) Strengthen our volunteer organizing efforts.
 * [Updates.](#interview-updates) Help us work through our backlog of interview improvements and updates.
-* [Testing.](#user-testing) Test interviews and create issue reports to help us make improvements and updates.
+* [Testing.](#testing) Test interviews and create issue reports to help us make improvements and updates.
 * [Translation.](#translation) Review translations for accuracy.
 * [Information gathering.](#information-gathering) Gather and update the information sources that power interview features, like courthouse addresses.
 
@@ -29,7 +46,7 @@ All volunteer work is done remotely, and all training, meetings, and communicati
 
 ### Volunteer organizing
 
-We plan for the volunteer organizing team to recruit, onboard, organize, and assess strengths and obstacles for the volunteer program. We could use folks with good communication and coordination skills, the ability to work independently, and the ability to track status and progress of projects and volunteers. In addition, we will need some volunteers to have comfort with one or more of the following tools: Email, Zoom, Microsoft Teams, Slack, project boards, spreadsheets, and GitHub.
+We plan for the volunteer organizing team to recruit, onboard, coordinate, and assess strengths and obstacles for the volunteer program. We could use folks with good communication and coordination skills, the ability to work independently, and the ability to track status and progress of projects and volunteers. In addition, we will need some volunteers to have comfort with one or more of the following tools: Email, Zoom, Microsoft Teams, Slack, project boards, spreadsheets, and GitHub.
 
 Volunteer organizing is an ongoing project and you can participate when you are able. We also encourage you to think about how this role fits with your current commitments.
 
@@ -39,7 +56,7 @@ Update interviews from a backlog of tasks. This involves coding in Docassemble, 
 
 Updating interviews is an ongoing project, and the updates team requires a long-term commitment. Volunteers should be able to commit at least 5–10 hours per month for at least 3 months.
 
-### User testing
+### Testing
 
 Test interviews independently or live over Zoom, depending on what we need to test. No experience or legal knowledge is necessary.
 
